--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,9 @@
 {
   "name": "@sivium/timescale-db-core",
-  "version": "0.0.22",
+  "version": "0.0.23",
+  "publishConfig": {
+    "access": "public"
+  },
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "exports": {
@@ -45,8 +48,8 @@
     "test": "jest --runInBand"
   },
   "dependencies": {
-    "@sivium/timescale-db-schemas": "workspace:^0.0.22",
-    "@sivium/timescale-db-utils": "workspace:^0.0.22"
+    "@sivium/timescale-db-schemas": "workspace:^0.0.23",
+    "@sivium/timescale-db-utils": "workspace:^0.0.23"
   },
   "devDependencies": {}
 }
