--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -1,6 +1,9 @@
 {
   "name": "@sivium/timescale-db-utils",
-  "version": "0.0.22",
+  "version": "0.0.23",
+  "publishConfig": {
+    "access": "public"
+  },
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "exports": {
@@ -42,7 +45,7 @@
     "test": "jest --runInBand"
   },
   "dependencies": {
-    "@sivium/timescale-db-schemas": "workspace:^0.0.22",
+    "@sivium/timescale-db-schemas": "workspace:^0.0.23",
     "debug": "^4.4.0"
   }
 }
